syntax = "proto3";

package prvs;
option go_package=".;prvs";

message RequestExitBattleSpace {
    string  BattleSpaceID = 1;      // 对战空间ID
    string  UID  = 2;               // player uid
}
