syntax = "proto3";

package pubs;
option go_package=".;pubs";

message SignIn{
    string token = 1;
}

message SignInResp{
    string uid = 1;
    string displayName = 2;
    map<string,string>  externs =3;
}

